<resources>
    <string name="app_name">Wallefy</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="plus_button">+</string>
    <string name="minus_button">-</string>
    <string name="history">History</string>

    <string name="title_history_element">Category</string>
    <string name="date_history_element">Date</string>
    <string name="note_history_element">Note...</string>

    <string name="type_account_transaction">type account</string>
    <string name="type_category_transaction">type category</string>
    <string name="category_transaction">Category</string>
    <string name="account_transaction">Account</string>

    <string name="one_calculator">1</string>
    <string name="two_calculator">2</string>
    <string name="three_calculator">3</string>
    <string name="four_calculator">4</string>
    <string name="five_calculator">5</string>
    <string name="six_calculator">6</string>
    <string name="seven_calculator">7</string>
    <string name="eight_calculator">8</string>
    <string name="nine_calculator">9</string>
    <string name="zero_calculator">0</string>

    <string name="plus_calculator">+</string>
    <string name="minus_calculator">-</string>
    <string name="div_calculator">/</string>
    <string name="mul_calculator">*</string>
    <string name="equal_calculator">=</string>
    <string name="coma_calculator">.</string>
    <string name="arrow_calculator">&#8592;</string>
    <string name="description_note">Note</string>
    <string name="description_date">Date</string>
    <string name="description_location">Location</string>
    <string name="description_picture">Picture</string>
    <string name="register_email_tv">Enter your email</string>
    <string name="register_email_hint">Em@il</string>
    <string name="register_name_tv">Choose a name</string>
    <string name="register_name_hint">Name</string>
    <string name="register_pass_tv">Enter a password</string>
    <string name="register_retypepass_tv">Retype the password</string>
    <string name="register_button">Register</string>
    <string name="back_to_login_button">Back to Login</string>
    <string name="add">add</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="category_name">Category name</string>
    <string name="icon">Icons</string>
    <string name="account_name">Account name</string>
    <string name="initial_balance">Initial balance</string>
    <string name="init_balance_date">Initial balance day</string>
    <string name="name">Name</string>
    <string name="after">After</string>
    <string name="before">Before</string>
    <string name="between">Between</string>
    <string name="search">Search</string>
    <string name="keep_me_logged">Keep me logged</string>
    <string name="balance">Balance</string>
    <string name="planned">Planned</string>
    <string name="entries_after_date">After date</string>
    <string name="from_account">From account</string>
    <string name="transfer_to_account">To account</string>
    <string name="transfer">Transfer</string>
    <string name="amount">Amount</string>
    <string name="old_password">Old password</string>
    <string name="category">Category</string>
    <string name="export">Export</string>
    <string name="password_recovery"><u>Forgot your password?</u></string>

</resources>
