<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context="com.example.dpene.wallefy.controller.fragments.TransferFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/from_account"
        android:textSize="@dimen/transfer_text_size" />

    <Spinner
        android:id="@+id/transfer_from_account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/transfer_to_account"
        android:textSize="@dimen/transfer_text_size" />

    <Spinner
        android:id="@+id/transfer_to_account_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin" />

    <EditText
        android:id="@+id/transfer_amount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionNext"
        android:hint="@string/amount"
        android:inputType="number" />

    <Button
        android:id="@+id/transfer_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/transfer" />

</LinearLayout>
