<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/transaction_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dpene.wallefy.controller.fragments.TransactionFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/color_orange_white"
        android:gravity="center_vertical|end">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transaction_sign"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:textSize="@dimen/transaction_small_text_size" />

            <TextView
                android:id="@+id/transaction_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:text="0"
                android:textSize="@dimen/transaction_amount_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/transaction_amount_currency"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:inputType="none"
            android:text="BGN"
            android:textAllCaps="true"
            android:textSize="@dimen/transaction_big_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/color_orange_white"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transaction_type_account"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:text="@string/type_account_transaction"
                android:textAllCaps="true"
                android:textSize="@dimen/transaction_small_text_size" />

            <Spinner
                android:id="@+id/transaction_account"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|top"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textAllCaps="true"
                android:textSize="@dimen/transaction_big_text_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/transaction_type_category"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|bottom"
                android:text="@string/type_category_transaction"
                android:textAllCaps="true"
                android:textSize="@dimen/transaction_small_text_size" />

            <Spinner
                android:id="@+id/transaction_category"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center_horizontal|top"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:textAllCaps="true"
                android:textSize="@dimen/transaction_big_text_size" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button

                    android:id="@+id/one_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/one_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/two_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/two_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/three_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/three_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button

                    android:id="@+id/four_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/four_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/five_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/five_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/six_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/six_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button

                    android:id="@+id/seven_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/seven_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/eight_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/eight_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/nine_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/nine_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1">

                <Button
                    android:id="@+id/coma_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/coma_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/zero_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:text="@string/zero_calculator"
                    android:textSize="@dimen/transaction_big_text_size" />

                <Button
                    android:id="@+id/delete_calculator"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:gravity="center"
                    android:text="@string/arrow_calculator"
                    android:textSize="50sp" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/color_orange"
            android:orientation="vertical">

            <Button

                android:id="@+id/divide_calculator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/div_calculator"
                android:textSize="@dimen/transaction_big_text_size" />

            <Button
                android:id="@+id/multiply_calculator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/mul_calculator"
                android:textSize="@dimen/transaction_big_text_size" />

            <Button
                android:id="@+id/minus_calculator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/minus_button"
                android:textSize="@dimen/transaction_big_text_size" />

            <Button
                android:id="@+id/plus_calculator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/plus_button"
                android:textSize="@dimen/transaction_big_text_size" />

            <Button
                android:id="@+id/equal_calculator"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:text="@string/equal_calculator"
                android:textSize="@dimen/transaction_big_text_size" />

        </LinearLayout>


    </LinearLayout>

    <!--<include layout="@layout/saving_buttons" />-->

</LinearLayout>


