<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dpene.wallefy.controller.fragments.EditProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/edit_profile_smaller_text_size" />

        <EditText
            android:id="@+id/edit_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textSize="@dimen/edit_profile_text_size" />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="@dimen/edit_profile_smaller_text_size" />

        <EditText
            android:id="@+id/edit_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textSize="@dimen/edit_profile_text_size" />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/old_password"
            android:textSize="@dimen/edit_profile_smaller_text_size" />

        <EditText
            android:id="@+id/edit_profile_old_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="@dimen/edit_profile_text_size" />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password"
            android:textSize="@dimen/edit_profile_smaller_text_size" />

        <EditText
            android:id="@+id/edit_profile_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:textSize="@dimen/edit_profile_text_size" />

        <TextView
            android:paddingTop="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/register_retypepass_tv"
            android:textSize="@dimen/edit_profile_smaller_text_size" />

        <EditText
            android:id="@+id/edit_profile_retype_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textSize="@dimen/edit_profile_text_size" />

    </LinearLayout>


</LinearLayout>
