<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/icon_row_history"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:adjustViewBounds="true" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="3"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/category_row_history"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_history_element"
                android:textSize="@dimen/drawer_element_text_size" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:src="@drawable/camera"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/date_row_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_history_element"
                android:textSize="@dimen/row_history_small_text_size" />

            <TextView
                android:id="@+id/note_row_history"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:text="@string/note_history_element"
                android:textSize="@dimen/row_history_small_text_size" />

        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/amount_row_history"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:text="00,00"
        android:textSize="@dimen/drawer_element_text_size" />

</LinearLayout>