<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.dpene.wallefy.controller.fragments.EditAccountFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:orientation="vertical"
        android:padding="@dimen/activity_vertical_margin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/account_name"
            android:textSize="@dimen/edit_account_smaller_text_size" />

        <EditText
            android:id="@+id/edit_account_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionNext"
            android:textSize="@dimen/edit_account_text_size" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/initial_balance"
            android:textSize="@dimen/edit_account_smaller_text_size" />

        <EditText
            android:id="@+id/edit_account_init_balance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionDone"
            android:textSize="@dimen/edit_account_text_size" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/init_balance_date"
            android:textSize="@dimen/edit_account_smaller_text_size" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/edit_account_init_balance_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:textSize="@dimen/edit_account_text_size" />

            <ImageButton
                android:id="@+id/edit_account_calendar_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@android:color/transparent"
                android:src="@drawable/calendar" />
        </RelativeLayout>
    </LinearLayout>

    <!--insert toolbar/ statusbar-->

    <!--<include layout="@layout/saving_buttons" />-->

</LinearLayout>
